--- a/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.less
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.less
@@ -107,12 +107,19 @@ label {
   grid-row: 2 / 3;
 }
 
-.event-short-view {
-  align-content: center;
-  justify-content: center;
-  margin: 5px;
-  padding: 5px;
+.event-short-view-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 5px
 }
+
+//.event-short-view {
+//  align-content: center;
+//  justify-content: center;
+//  margin: 5px;
+//  padding: 5px;
+//}
 
 .toggle {
   padding: 0;
