football events mobile select match player

--- a/src/app/shared/ui/select/select-player-in-match/select-player-in-match.component.html
+++ b/src/app/shared/ui/select/select-player-in-match/select-player-in-match.component.html
@@ -19,7 +19,7 @@
               onSelect(player)
             "
           >
-            {{ player.match_player.match_number }}
+            <b>{{ player.match_player.match_number }}</b>&nbsp;
             {{ player.person?.second_name | titlecase }}
           </button>
         }
