football events mobile select match player

--- a/src/app/shared/ui/select/select-player-in-match/select-player-in-match.component.html
+++ b/src/app/shared/ui/select/select-player-in-match/select-player-in-match.component.html
@@ -8,7 +8,7 @@
       [formControl]="control"
       [tuiDropdownLimitWidth]="'min'"
       style="padding-top: 10px"
-    >SELECT {{ placeholder }}
+    >SELECT {{ placeholder | uppercase }}
       <tui-data-list *tuiDataList>
         @for (player of players;
           track player.match_player?.id) {
