--- a/src/app/shared/ui/select/select-player-in-match/select-player-in-match.component.html
+++ b/src/app/shared/ui/select/select-player-in-match/select-player-in-match.component.html
@@ -7,6 +7,7 @@
     <tui-select
       [formControl]="control"
       [tuiDropdownLimitWidth]="'min'"
+      [tuiTextfieldCleaner]="true"
       style="padding-top: 10px"
     >SELECT {{ placeholder | uppercase }}
       <tui-data-list *tuiDataList>
