--- a/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
@@ -561,7 +561,25 @@
               @if (getEventAssistTacklePlayerFormControl(this.eventForm, this.arrayName, i); as control) {
                 @if (getEventTeam(eventsArray, i); as selectedTeam) {
                   @if (isTacklePossible(eventsArray, i) || getEventTacklePlayer(eventsArray, i)) {
-                    <div class="event-table-cell">
+                    @if (isReturnPlay(eventsArray, i)) {
+                      <div class="event-table-cell">
+                        @if (isMobile) {
+                          <app-select-player-in-match
+                            [players]="getPlayersForSelectedTeam(selectedTeam)"
+                            [control]="control"
+                            [placeholder]="'assist tackle player'"
+                          ></app-select-player-in-match>
+                        } @else {
+                          <app-search-player-in-match-autocomplete
+                            [action]="'select'"
+                            [placeholder]="'assist tackle player'"
+                            [players]="getPlayersForSelectedTeam(selectedTeam)"
+                            [control]="control"
+                          >
+                          </app-search-player-in-match-autocomplete>
+                        }
+                      </div>
+                    } @else {
                       @if (isMobile) {
                         <app-select-player-in-match
                           [players]="getDefencePlayersForTeam(selectedTeam)"
@@ -577,7 +595,7 @@
                         >
                         </app-search-player-in-match-autocomplete>
                       }
-                    </div>
+                    }
                   }
                 }
               }
