--- a/src/app/shared/ui/events/football-stats/simple-football-match-team-stats/simple-football-match-team-stats.component.html
+++ b/src/app/shared/ui/events/football-stats/simple-football-match-team-stats/simple-football-match-team-stats.component.html
@@ -8,6 +8,6 @@
   <p>3rd Down Conv: {{ teamWithStats.match_stats?.third_down_conversions }}
     /&nbsp;{{ teamWithStats.match_stats?.third_down_attempts }}</p>
   <p>4th Down Conv: {{ teamWithStats.match_stats?.fourth_down_conversions }}
-    /&nbsp;{{ teamWithStats.match_stats?.fourth_down_conversions }}</p>
+    /&nbsp;{{ teamWithStats.match_stats?.fourth_down_attempts }}</p>
 }
 
